[package]
name = "Micron"
version = "0.1.0"
authors = ["bosley <bosley117@gmail.com>"]
edition = "2018"

[workspace]
members = [".", "ast", "environment", "interpreter", "parser"]

[[bin]]
name = "micron-repl"
path = "src/main.rs"

[dependencies]
rustyline = "6.3.0"


micron_interpreter = { path = "./interpreter" }
micron_environment = { path = "./environment" }
micron_parser = { path = "./parser" }