[package]
name = "Micron"
version = "0.1.0"
authors = ["bosley <bosley117@gmail.com>"]
edition = "2018"

[workspace]
members = [".", "ast", "engine", "parser"]

[[bin]]
name = "micron-repl"
path = "src/main.rs"

[dependencies]
rustyline = "6.3.0"

micron_ast = { path = "./ast" }
micron_parser = { path = "./parser" }
micron_engine = { path = "./engine" }