[package]
name = "micron_interpreter"
version = "0.1.0"
authors = ["bosley <bosley117@gmail.com>"]
edition = "2018"

[build-dependencies]
lalrpop = { version="0.19.0", features = ["lexer"] }

[dependencies]
derive_more = "0.99.0"
rug = "1.11.0"

micron_ast = { path = "../ast" }
micron_environment = { path = "../environment" }